obj/Debug/net9.0/ConfigGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Teclast/source/ConfigurationLanguageToml/Grammar/ConfigGrammar.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class ConfigGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, NUMBER=12, STRING=13, NAME=14, MULTILINE_COMMENT=15, 
		WS=16, LINE_COMMENT=17;
	public const int
		RULE_config = 0, RULE_constantDecl = 1, RULE_constantUse = 2, RULE_statement = 3, 
		RULE_assignment = 4, RULE_dictDeclaration = 5, RULE_dictPairs = 6, RULE_dictPair = 7, 
		RULE_expression = 8;
	public static readonly string[] ruleNames = {
		"config", "constantDecl", "constantUse", "statement", "assignment", "dictDeclaration", 
		"dictPairs", "dictPair", "expression"
	};

	private static readonly string[] _LiteralNames = {
		null, "':='", "'$'", "'='", "'table'", "'('", "'['", "']'", "')'", "','", 
		"'-'", "'\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"NUMBER", "STRING", "NAME", "MULTILINE_COMMENT", "WS", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ConfigGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ConfigGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ConfigGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ConfigGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ConfigContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ConfigGrammarParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclContext[] constantDecl() {
			return GetRuleContexts<ConstantDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclContext constantDecl(int i) {
			return GetRuleContext<ConstantDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_config; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterConfig(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitConfig(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConfig(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConfigContext config() {
		ConfigContext _localctx = new ConfigContext(Context, State);
		EnterRule(_localctx, 0, RULE_config);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 22;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__3 || _la==NAME) {
				{
				State = 20;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 18;
					constantDecl();
					}
					break;
				case 2:
					{
					State = 19;
					statement();
					}
					break;
				}
				}
				State = 24;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 25;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantDeclContext : ParserRuleContext {
		public IToken name;
		public ExpressionContext value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ConfigGrammarParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ConstantDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constantDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterConstantDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitConstantDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantDeclContext constantDecl() {
		ConstantDeclContext _localctx = new ConstantDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_constantDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			_localctx.name = Match(NAME);
			State = 28;
			Match(T__0);
			State = 29;
			_localctx.value = expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantUseContext : ParserRuleContext {
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ConfigGrammarParser.NAME, 0); }
		public ConstantUseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constantUse; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterConstantUse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitConstantUse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantUse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantUseContext constantUse() {
		ConstantUseContext _localctx = new ConstantUseContext(Context, State);
		EnterRule(_localctx, 4, RULE_constantUse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 31;
			Match(T__1);
			State = 32;
			_localctx.name = Match(NAME);
			State = 33;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DictDeclarationContext dictDeclaration() {
			return GetRuleContext<DictDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_statement);
		try {
			State = 37;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
				EnterOuterAlt(_localctx, 1);
				{
				State = 35;
				dictDeclaration();
				}
				break;
			case NAME:
				EnterOuterAlt(_localctx, 2);
				{
				State = 36;
				assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ConfigGrammarParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 8, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			Match(NAME);
			State = 40;
			Match(T__2);
			State = 41;
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DictDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DictPairsContext dictPairs() {
			return GetRuleContext<DictPairsContext>(0);
		}
		public DictDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dictDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterDictDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitDictDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDictDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DictDeclarationContext dictDeclaration() {
		DictDeclarationContext _localctx = new DictDeclarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_dictDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			Match(T__3);
			State = 44;
			Match(T__4);
			State = 45;
			Match(T__5);
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NAME) {
				{
				State = 46;
				dictPairs();
				}
			}

			State = 49;
			Match(T__6);
			State = 50;
			Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DictPairsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DictPairContext[] dictPair() {
			return GetRuleContexts<DictPairContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DictPairContext dictPair(int i) {
			return GetRuleContext<DictPairContext>(i);
		}
		public DictPairsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dictPairs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterDictPairs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitDictPairs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDictPairs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DictPairsContext dictPairs() {
		DictPairsContext _localctx = new DictPairsContext(Context, State);
		EnterRule(_localctx, 12, RULE_dictPairs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			dictPair();
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__8) {
				{
				{
				State = 53;
				Match(T__8);
				State = 54;
				dictPair();
				}
				}
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DictPairContext : ParserRuleContext {
		public IToken name;
		public IToken separator;
		public ExpressionContext value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ConfigGrammarParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public DictPairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dictPair; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterDictPair(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitDictPair(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDictPair(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DictPairContext dictPair() {
		DictPairContext _localctx = new DictPairContext(Context, State);
		EnterRule(_localctx, 14, RULE_dictPair);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			_localctx.name = Match(NAME);
			State = 61;
			_localctx.separator = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==T__9 || _la==T__10) ) {
				_localctx.separator = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 62;
			_localctx.value = expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StringExprContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(ConfigGrammarParser.STRING, 0); }
		public StringExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterStringExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitStringExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ConstExprContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConstantUseContext constantUse() {
			return GetRuleContext<ConstantUseContext>(0);
		}
		public ConstExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterConstExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitConstExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumberExprContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(ConfigGrammarParser.NUMBER, 0); }
		public NumberExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterNumberExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitNumberExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumberExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DictExprContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public DictDeclarationContext dictDeclaration() {
			return GetRuleContext<DictDeclarationContext>(0);
		}
		public DictExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterDictExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitDictExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDictExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParenExprContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ParenExprContext(ExpressionContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.EnterParenExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IConfigGrammarListener typedListener = listener as IConfigGrammarListener;
			if (typedListener != null) typedListener.ExitParenExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IConfigGrammarVisitor<TResult> typedVisitor = visitor as IConfigGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 16, RULE_expression);
		try {
			State = 72;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				_localctx = new ConstExprContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 64;
				constantUse();
				}
				break;
			case NUMBER:
				_localctx = new NumberExprContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 65;
				Match(NUMBER);
				}
				break;
			case STRING:
				_localctx = new StringExprContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 66;
				Match(STRING);
				}
				break;
			case T__3:
				_localctx = new DictExprContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 67;
				dictDeclaration();
				}
				break;
			case T__4:
				_localctx = new ParenExprContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 68;
				Match(T__4);
				State = 69;
				expression();
				State = 70;
				Match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
